# nova

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  MANIFEST.in  PUBLISHING_TO_PYPI.md  QUICKSTART.md  README.md  TASKS.md  build_error.txt  generate_license.py  publish.ps1  pyproject.toml  txchyon_scan.json
nova_freemium/: __init__.py  advanced_complexity.py  cli.py  report.py  scanner.py  scoring.py
nova_premium/: __init__.py  advanced_seo.py  license_manager.py
nova_shared/: __init__.py  language_detection.py  utils.py
