[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-scanner"
version = "1.0.0"
description = "Professional Code + SEO Health Scanner for developers"
authors = [{name = "GalaxyBuilt", email = "galaxy@txchyon.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["seo", "code-analysis", "complexity", "scanner", "code-quality", "seo-audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
premium = [
    "anthropic>=0.18.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
nova = "nova_freemium.cli:cli"

[project.urls]
Homepage = "https://github.com/GalaxyBuilt/nova"
Documentation = "https://github.com/GalaxyBuilt/nova#readme"
Repository = "https://github.com/GalaxyBuilt/nova"
Issues = "https://github.com/GalaxyBuilt/nova/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=nova_freemium --cov=nova_shared --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.setuptools.packages.find]
where = ["."]
include = ["nova_*"]
exclude = ["tests*", "venv*"]

